--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       var maximumOffer = arv - closingCost - carryingCost - wholesaleFee - rehabCostAmount - profitAmount;
 
       // Display the result
-      document.getElementById('result').innerHTML = 'Maximum Allowable Offer: $' + maximumOffer.toFixed(2);
+      document.getElementById('result').innerHTML = 'Estimated Maximum Allowable Offer: $' + maximumOffer.toFixed(2);
     });
   </script>
 </body>
