--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Real Estate Deal Analyzer</title>
+  <title>Real Estate Deal Analyzer By Mohammad Khawaja</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
