--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <h1>Real Estate Deal Analyzer</h1>
+  <h1>Real Estate Deal Analyzer Mohammad Khawaja</h1>
 
   <form id="dealForm">
     <label for="askingPrice">Asking Price:</label>
