--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
   <h1>Real Estate Deal Analyzer By Mohammad Khawaja</h1>
 <button onclick="window.location.href = 'ARV.html';">ARV Calculator</button>
+<button onclick="window.location.href = 'roomCalculator.html';">Rooms Calculator</button>
+
   <form id="dealForm">
     <label for="askingPrice">Asking Price:</label>
     <input type="number" id="askingPrice" required><br>
