--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <h1>Real Estate Deal Analyzer By Mohammad Khawaja</h1>
 <button onclick="window.location.href = 'ARV.html';">ARV Calculator</button>
 <button onclick="window.location.href = 'roomCalculator.html';">Rooms Calculator</button>
+<button onclick="window.location.href = 'ai.html';">AI Script Generator</button>
+
 
   <form id="dealForm">
     <label for="askingPrice">Asking Price:</label>
