--- a/ai.html
+++ b/ai.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>AI Script Generator for Wholesale Real Estate</title>
+    <title>AI Script Generator for Wholesale Real Estate by Mohammad Khawaja</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <h1>AI Script Generator for Wholesale Real Estate</h1>
+    <h1>AI Script Generator for Wholesale Real Estate by Mohammad Khawaja</h1>
 
     <label for="category">Select Script Category:</label>
     <select id="category">
