--- a/roomCalculator.html
+++ b/roomCalculator.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Estimated Room Fix Cost Calculator</h2>
+    <h2>Estimated Room Fix Cost Calculator by Mohammad Khawaja</h2>
     <form>
       <div class="form-group">
         <label for="area">Square Feet:</label>
