--- a/ARV.html
+++ b/ARV.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ARV Calculator</title>
+  <title>ARV Calculator by Mohammad Khawaja</title>
   <script>
     function addPrice() {
       var priceInput = document.getElementById('priceInput');
@@ -33,7 +33,7 @@
   </script>
 </head>
 <body>
-  <h1>ARV Calculator</h1>
+  <h1>ARV Calculator by Mohammad Khawaja</h1>
   
   <label for="priceInput">Enter house price:</label>
   <input type="number" id="priceInput" />
